--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,12 @@
         "vite": "^5.0.12"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@fontsource/roboto": "^5.0.8",
+        "@mui/icons-material": "^5.15.5",
+        "@mui/material": "^5.15.5",
+        "antd": "^5.13.2",
         "axios": "^1.6.5",
         "react-router-dom": "^6.21.3"
     }
