--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,11 @@
         "@fontsource/roboto": "^5.0.8",
         "@mui/icons-material": "^5.15.5",
         "@mui/material": "^5.15.5",
+        "@reduxjs/toolkit": "^2.0.1",
         "antd": "^5.13.2",
         "axios": "^1.6.5",
-        "react-router-dom": "^6.21.3"
+        "react-redux": "^9.1.0",
+        "react-router-dom": "^6.21.3",
+        "redux": "^5.0.1"
     }
 }
